# S2Language

./: README.md  dune  dune-project
src/main/: main.ml
src/main/frontend/: lexer.mll  parser.mly
src/main/frontend/helper/: evaluate.ml  evaluation.ml  exception.ml  expression.ml  token.ml
src/main/frontend/module/: comparison.ml  virtual_variable.ml
src/main/lexer/: lexer.mll
src/main/parser/: parser.mly
src/main/parser/helper/: exception.ml  expression.ml
src/test/: dune  test.ml
src/test/component/: arithmatic.ml  boolean.ml
src/test/statement/: diketahui.ml  jika.ml  tampilkan.ml
