(copy_files (files ./src/main/parser/helper/*.ml))
(copy_files (files ./src/main/parser/module/*.ml))

(copy_files (files ./src/main/lexer/lexer.mll))
(copy_files (files ./src/main/parser/parser.mly))
(copy_files (files ./src/main/main.ml))

(menhir (modules parser))
(ocamllex lexer)

(executable (name main))