(copy_files (files ../main/parser/helper/*.ml))
(copy_files (files ../main/parser/module/*.ml))
(copy_files (files ./component/*.ml))

(copy_files (files ../main/lexer/lexer.mll))
(copy_files (files ../main/parser/parser.mly))
(copy_files (files ../main/main.ml))

(menhir (modules parser))
(ocamllex lexer)

(test (name test) (libraries ounit2))