(copy_files (files ../main/frontend/helper/*.ml))
(copy_files (files ../main/frontend/module/*.ml))
(copy_files (files ./component/*.ml))

(copy_files (files ../main/frontend/lexer.mll))
(copy_files (files ../main/frontend/parser.mly))
(copy_files (files ../main/main.ml))

(menhir (modules parser))
(ocamllex lexer)

(test (name test) (libraries ounit2))